<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xcoordinate">X Co-ordinates</string>
    <string name="ycoordinate">Y Co-ordinates</string>
    <string name="fzero">0.0</string>
    <string name="izero">0</string>

    <string name="action_open_ui">UI</string>
    <string name="location_unknown">Unknown</string>

    <string name="positioning_mode">Positioning Mode</string>
    <string name="training_mode">Training Mode</string>
    <string name="program_mode">Choose Mode</string>
    <string name="action_savedata">Save Data</string>
    <string name="action_loaddata">Load Data</string>


</resources>
