<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.buffalo.cse.locationapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
<<<<<<< HEAD
    <item
        android:id="@+id/training_mode"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_ui"
        android:orderInCategory="100"
        android:title="@string/action_open_ui"
        app:showAsAction="never"/>
=======
    
    <item
        android:id="@+id/training_mode"
        android:orderInCategory="100"
        android:title="@string/training_mode"
        android:checkable="true"
        />
    
>>>>>>> fb41d779168644b218948cfc970946bb79dd8f39

</menu>
