<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.buffalo.cse.locationapp.MainActivity" >

    <edu.buffalo.cse.locationapp.MapView android:id="@+id/dummymap" 
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <TableLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	    <!-- 	<TableRow>
	    
ImageView android:id="@+id/dummymap"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content" />
	</TableRow> -->
	<TableRow>
	    <TextView 
	        android:id="@+id/locationdata"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</TableRow>
	<TableRow>
	    <TextView
	        android:id="@+id/wifidata"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</TableRow>
	<TableRow>
	    <TextView
	        android:id="@+id/displaytext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</TableRow>

	<TableRow>
            <TextView
                android:id="@+id/xcoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xcoordinate" />
        </TableRow>
<!--         <TableRow> -->
<!--             <TextView -->
<!--                 android:id="@+id/ycoor" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:text="Y Coordinate: " /> -->
<!--         </TableRow> -->

<!--         <TableRow> -->
<!--             <TextView -->
<!--                 android:id="@+id/zcoor" -->
<!--                 android:layout_width="wrap_content" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:text="Z Coordinate: " /> -->
<!--         </TableRow> -->
		
		<TableRow>
            <TextView
                android:id="@+id/distanceX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fzero" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:id="@+id/distanceY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fzero" />
        </TableRow>
        
        <TableRow>
            <TextView
                android:id="@+id/distanceZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fzero" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/stepCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/izero" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/stepDetector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/izero" />
        </TableRow>
        
	</TableLayout>

</RelativeLayout>
